testdata/baselines/reference/submodule/compiler/tsxAttributesHasInferrableIndex.errors.txt
tsxAttributesHasInferrableIndex.tsx(15,12): error TS2322: Type '{}' is not assignable to type 'Attributes'.
  Index signature for type 'string' is missing in type '{}'.


==== tsxAttributesHasInferrableIndex.tsx (1 errors) ====
    type AttributeValue = number | string | Date | boolean;
    interface Attributes {
        [key: string]: AttributeValue;
    }
    function createElement(name: string, attributes: Attributes | undefined, ...contents: string[]) {
        return name;
    }
    namespace createElement.JSX {
        type Element = string;
    }
    
    function Button(attributes: Attributes | undefined, contents: string[]) {
        return '';
    }
    const b = <Button></Button>
               ~~~~~~
!!! error TS2322: Type '{}' is not assignable to type 'Attributes'.
!!! error TS2322:   Index signature for type 'string' is missing in type '{}'.
    